2011-01-01  Adam Barth  <abarth@webkit.org>

        Speculative build fix for GTK.  Update the paths in GNUmakefile to
        include "Source".

        * GNUmakefile.am:

2011-01-01  Adam Barth  <abarth@webkit.org>

        Update relative paths in JavaScriptCore.gyp to account for the extra
        level of directories.

        * JavaScriptCore.gyp/JavaScriptCore.gyp:

2010-12-31  Patrick Gansterer  <paroga@webkit.org>

        Reviewed by Darin Adler.

        Add a fast case for ASCII strings in HashAndUTF8CharactersTranslator::equal
        https://bugs.webkit.org/show_bug.cgi?id=50517

        This change shows about 2% performance win on the xml-parser benchmark.

        * wtf/text/AtomicString.cpp:
        (WTF::HashAndUTF8CharactersTranslator::equal):

2010-12-30  Patrick Gansterer  <paroga@webkit.org>

        Reviewed by Ariya Hidayat.

        [CMake] Add WTF_HEADERS
        https://bugs.webkit.org/show_bug.cgi?id=51741

        Add the WTF headers to show them in Visual Studio.

        * wtf/CMakeLists.txt:
        * wtf/CMakeListsWinCE.txt:

2010-12-30  Konstantin Tokarev  <annulen@yandex.ru>

        Reviewed by David Kilzer.

        [Qt] Don't build wtf/TCSystemAlloc.cpp if --system-malloc option is
        used
        https://bugs.webkit.org/show_bug.cgi?id=51672

        * wtf/wtf.pri: Replaced USE_SYSTEM_MALLOC with USE_SYSTEM_MALLOC=1

2010-12-30  Patrick Gansterer  <paroga@webkit.org>

        Reviewed by Darin Adler.

        Use OS(WINDOWS) instead of COMPILER(MSVC) in FastMalloc.cpp
        https://bugs.webkit.org/show_bug.cgi?id=51743

        Most of the ifdefs belong to windows and not to the MSVC compiler.

        * wtf/FastMalloc.cpp:

2010-12-29  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Sam Weinig.

        Bug 51724 - In strict mode string literals should allow \0, but disallow \8 and \9.

        * parser/Lexer.cpp:
        (JSC::Lexer::parseString):

2010-12-29  Helder Correia  <helder@sencha.com>
